--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
+    "jimp": "^1.6.0",
     "moment": "2.29.4",
     "nouislider": "15.1.0",
     "openai": "^3.2.1",
@@ -16,10 +18,12 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "8.9.0",
-    "sass": "1.54.0"
+    "sass": "1.54.0",
+    "tesseract.js": "^5.1.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--max-old-space-size=4096 react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
